src/index.css
body {
  background-repeat: no-repeat;
  background-size: cover;
}

html {
  height: 100%;
}

/*When the chat component is closed, use .cognigy-web-chat, else use cognigy-web-chat__open*/
.cognigy-outer-container__closed {
  opacity: 0;
}

.cognigy-outer-container__open, .cognigy-outer-container__closed {
  display: -ms-flexbox;
	-ms-flex-align: center;
	-ms-flex-direction: column;
  display: -webkit-box;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
          flex-direction: column;
  -webkit-box-shadow: -2px 2px 10px #888888;
          box-shadow: -2px 2px 10px #888888;
  -webkit-box-align: center;
          align-items: center;
  border-radius: 10px;
  font-family: Ubuntu, sans-serif;
  height: 30rem;
  width: 20rem;
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 0 50px 100px 0;
  -webkit-transition: all .200s ease-out;
  -o-transition: all .200s ease-out;
  transition: all .200s ease-out  
}

@media only screen and (max-width: 1000px) {
  .cognigy-outer-container__open, .cognigy-outer-container__closed {
      width: 100%;
      height: 100%;
      margin: 0;
      /* Always keep the chat open on small screens */
      opacity: 1; 
  }
}

@media only screen and (max-width: 1000px) {
  .cognigy-chat-state-closed, .cognigy-chat-state-open {
      display: none;
  }
}

/*Styling for toggle chat state*/
.cognigy-chat-state-closed, .cognigy-chat-state-open {
  border-radius: 50%;
  width: 60px;
  height: 60px;
  background-color: #333333;
  margin-right: 1rem;
  margin-bottom: 1rem;
  background-repeat: no-repeat;
  background-position: center;
  position: fixed;
  bottom: 0;
  right: 0;
}

.cognigy-chat-state-open {
  background-image: url('https://s3.eu-central-1.amazonaws.com/cognigydev/CognigyWebchat/images/close.svg');
}

.cognigy-chat-state-closed {
  background-image: url('https://s3.eu-central-1.amazonaws.com/cognigydev/CognigyWebchat/images/chat_bubble.svg');  
}

/*The header is comprised of an outer container which ensures that the
header content is only 90% of the total width of the chat box - just like the content container*/

.cognigy-chat-header-container, .cognigy-chat-header-container__open {
  background-color: #333333;
  color: white;
  width: 100%;
  display: -webkit-box;
  display: flex;
  display: -ms-flexbox;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
          justify-content: center;
}

.cognigy-chat-header-container {
  height: 100%;
}

.cognigy-header-avatar {
  width: 60px;
  height: 34px;
  margin: 0 0.5rem -4px 0.2rem;
  border-radius: 50%;
}

.cognigy-header-text {
  display: -ms-flexbox;
	-ms-flex-direction: column;
  display: -webkit-box;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
          flex-direction: column;
}

.cognigy-header-title {
  font-size: 14px;
}

.cognigy-header-title:after {
  content:"\a";
  white-space: pre;
}

.cognigy-header-subtitle {
  color: hsla(0,0%,100%,.8);
  font-size: 12px;
  margin-top: 3px;
}

.cognigy-header-subtitle::before {
  content: "\2022";
  margin-right: 5px;
  font-weight: bold;
  color: #00FF00;
}

.cognigy-close-icon {
  width: 15px;
  height: 15px;
}

/*The close icon disappears when the header is closed*/
.cognigy-chat-header-container > .cognigy-chat-header > .cognigy-close-icon {
  display: none;
}

.cognigy-chat-header-container > .cognigy-chat-header {
  -ms-flex-pack: center;
  -webkit-box-pack: center !important;
          justify-content: center !important;
}

.cognigy-chat-header-container__open {
  height: 4rem;
  border-radius: 10px 10px 0 0;
  flex-shrink: 0;  
  -ms-flex-negative: 0;
}

.cognigy-chat-header {
  display: -ms-flexbox;
	-ms-flex-align: center;
  display: -webkit-box;
  display: flex;
  -webkit-box-align: center;
          align-items: center;
  width: 100%;
  height: 100%;
}

/*Container for chat content: Same function as header content defined above*/
.cognigy-chat-container {
	width: 100%;
	font-size: 12px;
	/* Random number to fix overflow-y: scroll problem in IE 10 */
	-ms-flex-preferred-size: 1px;
	-ms-flex-positive: 1;
	-webkit-box-flex: 1;
	        flex-grow: 1;
	padding-top: 10px;
  overflow-y: scroll;
  overflow-x: hidden;
	padding-bottom: 20px;
	background-color: white;
  }

/*Style scrollbar*/
.cognigy-chat-container::-webkit-scrollbar {
  width: 6px;
}

.cognigy-chat-container::-webkit-scrollbar-thumb {
  background-color: rgba(0,0,0,0.3);
  outline: 1px solid slategrey;
  border-radius: 20px;
  display: -ms-flexbox;
	-ms-flex-direction: column-reverse;
  -webkit-box-orient: vertical;
  -webkit-box-direction: reverse;
	        flex-direction: column-reverse;
  display: -webkit-box;
  display: flex;
}

.displayNone {
  display: none !important;
}

.visibilityHidden {
  visibility: hidden;
}

/*Below is styling for the form, input, button and window components*/
.cognigy-chat-form {
  display: -ms-flexbox;
  -ms-flex-pack: justify;
  -ms-flex-align: center;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: justify;
  background-color: #f4f7f9;
  margin-bottom: 0;
  width: 100%;
  -webkit-box-align: center;
          align-items: center;
  border-radius: 0 0 10px 10px;
  -webkit-transition: background-color .2s ease,-webkit-box-shadow .2s ease;
  transition: background-color .2s ease,-webkit-box-shadow .2s ease;
  -o-transition: background-color .2s ease,box-shadow .2s ease;
  transition: background-color .2s ease,box-shadow .2s ease;
  transition: background-color .2s ease,box-shadow .2s ease,-webkit-box-shadow .2s ease;
  height: 50px;
  min-height: 50px;
  overflow: hidden;
}

.cognigy-chat-input {
  background: #f4f7f9;
  color: #565867;
  resize: none;
  border: none;
  overflow: auto;
  font-family: Ubuntu, sans-serif;
  width: 65%;
  margin-left: 20px;
  font-size: 14px;
}

.cognigy-chat-input:focus {
  outline: none;
}

.cognigy-chat-button  {
  border: 10px;
  border-radius: 20px;
  padding: 0.3rem;
  background-color: transparent;
  color: white;
  position: absolute;
  right: 0;
  cursor: pointer;
  /* Necessary because of fileUpload input field */
  z-index: 3;
}

.cognigy-record-toggle-button {
  border: 10px;
  border-radius: 20px;
  padding: 0.3rem;
  background-color: transparent;
  color: white;
  position: absolute;
  right: 0;
  margin-right: 30px;
  cursor: pointer;
  /* Necessary because of fileUpload input field */
  z-index: 3;
}

.cognigy-chat-button:focus, .cognigy-record-toggle-button:focus {
  outline: none;
}

.cognigy-record-button {
  background-color: white;
  padding: 20px 30px;
  display: -ms-flexbox;
	-ms-flex-align: center;
  display: -webkit-box;
  display: flex;
  -webkit-box-align: center;
          align-items: center;
  background-image: url('https://s3.eu-central-1.amazonaws.com/cognigydev/CognigyWebchat/images/mic.gif');
  background-position: center;
  background-repeat: no-repeat;
}

/*Styling for messages sent by the user and received from the bot*/
.cognigy-chat-user-message-container {
  display: -ms-flexbox;
  -ms-flex-align: end;
  -ms-flex-pack: end;
  display: -webkit-box;
  display: flex;
  word-break: break-word;
  -webkit-box-pack: end;
          justify-content: flex-end;
  margin-bottom: 0.5rem;
  -webkit-box-align: end;
          align-items: flex-end;
  margin-right: 10px;
}

.cognigy-chat-bot-message-container {
  display: -ms-flexbox;
	-ms-flex-align: end;
  display: -webkit-box;
  display: flex;
  word-break: break-word;
  margin: 10px 0 15px 10px;
  -webkit-box-align: end;
          align-items: flex-end;
  min-width: 0 !important;
  min-height: 0 !important;
}

.overflow__hidden {
  overflow: hidden;
}

.cognigy-chat-user-message {
  background-color: #f1f0f0;
  border-radius: 20px 20px 4px 20px;
  padding: 10px 15px;
  margin: 0.5rem 0;
  color: rgba(0,0,0,0.8);
  max-width: 55%;
  white-space: pre-line;
}

.cognigy-chat-bot-message {
  background-color: #333333;
  border-radius: 20px 20px 20px 4px;
  padding: 10px 15px;
  max-width: 55%;  
  color: white;
  white-space: pre-line
}

/*Styling for avatars*/
.cognigy-chat-bot-avatar {
  height: 20px;
  min-width: 20px;
  max-width: 20px;
  /*Fix "air" at the bottom of svg and add margin to sides*/
  margin: 0 0.2rem -4px 0.2rem;
  border-radius: 20px;
}

.cognigy-chat-user-avatar {
  margin: 0 0.4rem 0 0.2rem;
  height: 20px;
  min-width: 20px;
  max-width: 20px;
  border-radius: 20px;
}

.cognigy-send-icon, .cognigy-record-toggle-icon, .cognigy-file-upload-icon {
  width: 40px;
  height: 17px;
  opacity: 0.3;
}

.cognigy-file-upload-input, .cognigy-file-upload-input-no-record-button {
  opacity: 0;
  width: 50px;
  position: absolute;
  right: 0;
  margin-right: 60px;
  margin-top: -10px;
  background: transparent;
  z-index: 2;
  cursor: pointer;
}

.cognigy-file-upload-button, .cognigy-file-upload-button-no-record-button {
  margin-right: 60px;
  border: 10px;
  border-radius: 20px;
  padding: 0.3rem;
  background-color: transparent;
  color: white;
  position: absolute;
  right: 0;
  cursor: pointer;
}

.cognigy-file-upload-button-no-record-button {
  margin-right: 30px !important;
}

.cognigy-file-upload-input-no-record-button {
  margin-right: 30px !important;
}

/* Placeholder text for textarea (which is really a div) */
[contentEditable=true]:empty:not(:focus):before {
  content:attr(data-text)
}

.cognigy-get-started-button {
  color: #333333;
  padding: 0 10px;
  text-align: center;
  background: white;
  display: block;
  line-height: 32px;
  margin: 0 2px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  border-top: 1px solid rgba(0,0,0,0.1) !important;
  border-radius: 0 0 10px 10px;
  width: 100%;
  margin: 0;
  box-shadow: none;
  border-bottom: none;
  border-left: none;
  border-right: none;
  background-color: #f4f7f9;
}

.cognigy-persistent-menu-button {
  cursor: pointer;
  margin-left: 15px;
  opacity: 0.3;
  align-self: flex-end;
  display: flex;
}

.cognigy-persistent-menu-title {
  font-size: 14px;
  font-weight: bold;
  display: flex;
  justify-content: center;
  border-bottom: 1px solid #dddfe2;
  color: rgba(0,0,0,0.87);
}

.cognigy-persistent-menu-item {
  font-size: 14px;
  padding: 0 10px;
  cursor: pointer;
}

.cognigy-persistent-menu-container {
  width: 300px;
  background-color: white;
  border: 0;
  position: absolute;
  bottom: 60px;
  border-radius: 6px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 1px 10px rgba(0, 0, 0, .35);
  margin-left: 8px;
}
.cognigy-persistent-menu-container-arrow {
  position: absolute;
  bottom: 39px;
  height: 40px;
  width: 40px;
  left: 6px;
}

.cognigy-persistent-menu-outer-container {
  display: flex;
  align-items: flex-end;
}

